--- a/src/main/resources/templates/updatepage.html
+++ b/src/main/resources/templates/updatepage.html
@@ -74,6 +74,10 @@
                       <input id="register-uidcard" th:value="${user.uidcard}" type="text" name="uidcard" required data-msg="Please enter your new uidcard" class="input-material">
                       <label for="register-uidcard" class="label-material">IdCard        </label>
                     </div>
+                    <div class="form-group-material">
+                      <input id="register-rid" th:value="${user.rid}" type="text" name="rid" required data-msg="Please enter your new phone" class="input-material">
+                      <label for="register-uphone" class="label-material">Type        </label>
+                    </div>
                     <div class="form-group terms-conditions text-center">
                       <input id="register-agree" name="registerAgree" type="checkbox" required value="1" data-msg="Your agreement is required" class="checkbox-template">
                       <label for="register-agree">I agree with the terms and policy</label>
